--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,4 @@
-:root {
-  font-family: system-ui, sans-serif;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
